--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: JING WANG # your name (or website title) here
 logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Self-motivated software engineer with 5-year experience in iOS app development in Swift. Passionate about the building UI that is easy to use and understand. Familiar with the interaction with BLE wearable devices, testing and app deployment. 
+  Self-motivated software engineer with 8-year experience in iOS development in Swift. I am passionate about the bringing productivity and fun to people with latest technology and well designed UI/UX. Expertise in BLE based wearable devices. Familiar with testing and app deployment. 
   <br><br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/jing-wang-890b2537/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/jing-wang-890b2537/">LinkedIn</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
