--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: JING WANG # your name (or website title) here
+title: Jing Wang # your name (or website title) here
 logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Self-motivated software engineer with 8-year experience in iOS development in Swift. I am passionate about the bringing productivity and fun to people with latest technology and well designed UI/UX. Expertise in BLE based wearable devices. Familiar with testing and app deployment. 
