--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Self-motivated software engineer with 8-year experience in iOS development in Swift. I am passionate about the bringing productivity and fun to people with latest technology and well designed UI/UX. Expertise in BLE based wearable devices. Familiar with testing and app deployment. 
   <br><br>
-  Second description 
+
+  More Info 
   <br><br>
   <a href="https://www.linkedin.com/in/jing-wang-890b2537/">LinkedIn</a> 
   
